# CubeChip-SDL

./: .gitignore  CMakeLists.txt  CubeChip (SDL).rc  CubeChip (SDL).sln  CubeChip (SDL).vcxproj  CubeChip (SDL).vcxproj.filters  CubeChip.sln  LICENSE.txt  README.md  imgui.ini  resource.h
.github/workflows/: desktop_platforms.yml  linux.yml  macos.yml  windows.yml
cmake/: __gitversion.cmake  _project_filelist.cmake  _vendor_utils.cmake  _versioning.cmake  atomic_queue.cmake  cxxopts.cmake  fmt.cmake  imgui.cmake  nlohmann-json.cmake  sdl3.cmake  tl-expected.cmake  tomlplusplus.cmake
guides/: Legacy (Original) SuperCHIP Display Specification.md
include/components/: Aligned.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioFilters.cpp  BasicInput.cpp  BasicInput.hpp  FrameLimiter.cpp  FrameLimiter.hpp  Map2D.hpp  RangeIterator.hpp  SimpleRingBuffer.hpp  TripleBuffer.hpp  Voice.hpp  Well512.cpp  Well512.hpp
include/frontend/: CubeChip.cpp  FrontendHost.cpp  FrontendHost.hpp  FrontendInterface.cpp  FrontendInterface.hpp
include/frontend/fonts/: RobotoMono.hpp
include/services/: BasicLogger.hpp  BasicVideoSpec.cpp  BasicVideoSpec.hpp  HomeDirManager.cpp  HomeDirManager.hpp
include/shims/: AtomSharedPtr.hpp  ExecPolicy.hpp  Expected.hpp  HDIS_HCIS.hpp  Thread.hpp
include/systems/: CoreRegistry.cpp  CoreRegistry.hpp  SystemInterface.cpp  SystemInterface.hpp
include/systems/BYTEPUSHER/: BytePusher_CoreInterface.cpp  BytePusher_CoreInterface.hpp
include/systems/BYTEPUSHER/Cores/: BYTEPUSHER_STANDARD.cpp
include/systems/CHIP8/: Chip8_CoreInterface.cpp  Chip8_CoreInterface.hpp
include/systems/CHIP8/Cores/: CHIP8X.cpp  CHIP8X.hpp  CHIP8_MODERN.cpp  CHIP8_MODERN.hpp  MEGACHIP.cpp  MEGACHIP.hpp  SCHIP_LEGACY.cpp  SCHIP_LEGACY.hpp  SCHIP_MODERN.cpp  SCHIP_MODERN.hpp  XOCHIP.cpp  XOCHIP.hpp
include/systems/GAMEBOY/: GameBoy_CoreInterface.cpp
include/systems/GAMEBOY/Cores/: GAMEBOY_CLASSIC.cpp  GAMEBOY_CLASSIC.hpp
include/utilities/: ArrayOps.hpp  ColorOps.hpp  Concepts.hpp  DefaultConfig.cpp  DefaultConfig.hpp  EzMaths.hpp  FriendlyUnique.hpp  Macros.hpp  Millis.cpp  Millis.hpp  SHA1.hpp  SimpleFileIO.hpp  ThreadAffinity.cpp  ThreadAffinity.hpp  Typedefs.hpp
src/: Concepts.hpp  CubeChip.cpp  Cubechip.hpp  EmuHost.cpp  EmuHost.hpp  FrontendHost.cpp  FrontendHost.hpp  Includes.hpp  Types.hpp
src/Assistants/: Aligned.hpp  ArrayOps.hpp  AssignCast.hpp  AtomicSharedProxy.hpp  AttachConsole.cpp  AttachConsole.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioFilters.hpp  AudioSpecBlock.cpp  AudioSpecBlock.hpp  BasicAudioSpec.cpp  BasicAudioSpec.hpp  BasicHome.cpp  BasicHome.hpp  BasicInput.cpp  BasicInput.hpp  BasicKeyInput.cpp  BasicKeyInput.hpp  BasicLogger.cpp  BasicLogger.hpp  BasicRenderer.cpp  BasicRenderer.hpp  BasicVideoSpec.cpp  BasicVideoSpec.hpp  BytePun.hpp  ColorOps.hpp  Concepts.hpp  DefaultConfig.cpp  DefaultConfig.hpp  EzMaths.hpp  FrameLimiter.cpp  FrameLimiter.hpp  FrontendInterface.cpp  FrontendInterface.hpp  GlobalAudioBase.cpp  GlobalAudioBase.hpp  HexInput.cpp  HexInput.hpp  HomeDirManager.cpp  (+30 more)
src/Assistants/Unused/: AlignedAlloc.hpp  BytePun.hpp
src/EmuInterface/: EmuInterface.cpp  EmuInterface.hpp  GameFileChecker.cpp  GameFileChecker.hpp
src/EmuInterface/BYTEPUSHER/: BytePusher_CoreInterface.hpp  HexInput.cpp  HexInput.hpp
src/EmuInterface/BYTEPUSHER/Cores/: BYTEPUSHER_STANDARD.cpp  BYTEPUSHER_STANDARD.hpp
src/EmuInterface/CHIP8/: Chip8_CoreInterface.cpp  Chip8_CoreInterface.hpp  CoreInterface.cpp  CoreInterface.hpp  HexInput.cpp
src/EmuInterface/CHIP8/Cores/: CHIP8_MODERN.cpp  CHIP8_MODERN.hpp
src/GuestClass/: DisplayColors.cpp  DisplayColors.hpp  DisplayTraits.cpp  DisplayTraits.hpp  Enums.hpp  FileTypes.cpp  FileTypes.hpp  GameFileChecker.cpp  GameFileChecker.hpp  Guest.hpp  GuestFunctions.cpp  HexInput.cpp  HexInput.hpp  Init.cpp  MemoryBanks.cpp  MemoryBanks.hpp  ProgramControl.cpp  ProgramControl.hpp  Registers.cpp  Registers.hpp  RomCheck.cpp  RomCheck.hpp  SoundCores.cpp  SoundCores.hpp  _AudioCores.cpp  _DisplayColors.cpp  _MemoryBanks.cpp  _ProgramControl.cpp  _Registers.cpp  _SoundCores.cpp  _SoundCores.hpp
src/GuestClass/EmuCores/: CHIP8_MODERN.cpp  CHIP8_MODERN.hpp  EmuCores.cpp  EmuCores.hpp
src/GuestClass/InstructionSets/: Interface.hpp  _Classic8.cpp  _Gigachip.cpp  _LegacySC.cpp  _Megachip.cpp  _ModernXO.cpp
src/GuestClass/PlatformCores/: Chip8.cpp
src/GuestClass/to_be_removed/: Guest.hpp  GuestFunctions.cpp  Init.cpp
src/GuestClass/to_be_removed/InstructionSets/: Interface.hpp  _LegacySC.cpp
src/HostClass/: BasicAudioSpec.cpp  BasicAudioSpec.hpp  BasicVideoSpec.cpp  BasicVideoSpec.hpp  EmuHost.cpp  EmuHost.hpp  HomeDirManager.cpp  HomeDirManager.hpp  Host.hpp  HostFunctions.cpp  _AudioSettings.cpp  _FileInfo.cpp  _RenderSettings.cpp  _RomInfo.cpp
src/IncludeMacros/: AtomSharedPtr.hpp  Expected.hpp  HDIS_HCIS.hpp  Thread.hpp
src/InstructionSets/: Interface.hpp  _Classic8.cpp  _Gigachip.cpp  _LegacySC.cpp  _Megachip.cpp  _ModernXO.cpp
src/Libraries/: CMakeLists.txt
src/Libraries/atomic_queue/: CMakeLists.txt
src/Libraries/jthread/: LICENSE.txt  jthread.hpp  stop_token.hpp
src/Systems/: CoreRegistry.cpp  CoreRegistry.hpp  EmuInterface.cpp  EmuInterface.hpp  GameFileChecker.cpp  GameFileChecker.hpp  SystemInterface.cpp  SystemInterface.hpp  SystemsInterface.cpp  SystemsInterface.hpp
src/Systems/BYTEPUSHER/: BytePusher_CoreInterface.cpp  BytePusher_CoreInterface.hpp
src/Systems/BYTEPUSHER/Cores/: BYTEPUSHER_STANDARD.cpp  BYTEPUSHER_STANDARD.hpp
src/Systems/CHIP8/: Chip8_CoreInterface.cpp  Chip8_CoreInterface.hpp
src/Systems/CHIP8/Cores/: CHIP8X.cpp  CHIP8X.hpp  CHIP8_MODERN.cpp  CHIP8_MODERN.hpp  MEGACHIP.cpp  MEGACHIP.hpp  SCHIP_LEGACY.cpp  SCHIP_LEGACY.hpp  SCHIP_MODERN.cpp  SCHIP_MODERN.hpp  XOCHIP.cpp  (+1 more)
src/Systems/GAMEBOY/: GameBoy_CoreInterface.cpp  GameBoy_CoreInterface.hpp
src/to_be_removed/InstructionSets/: Interface.hpp  _Megachip.cpp
test_roms/: minimal_hires_16x16.sc8  minimal_lores_16x16.sc8  oob_test_7.txt  schip_lores_draw_copy_test.sc8  xo_minimal_16x16.xo8  xo_minimal_8xN.xo8
(+2 files in other folders)
